--- a/sorelTP2/src/main/resources/application.properties
+++ b/sorelTP2/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3308/games_db
 spring.datasource.username=admin
 spring.datasource.password=sorelus50
+spring.mvc.view.prefix= /WEB-INF/jsp/
+spring.mvc.view.suffix= .jsp
