--- a/sorelTP2/src/main/resources/application.properties
+++ b/sorelTP2/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=admin
 spring.datasource.password=sorelus50
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
+#pour les messages avec accent, internalisation
+spring.messages.encoding=ISO-8859-1
