--- a/sorelTP2/pom.xml
+++ b/sorelTP2/pom.xml
@@ -93,6 +93,11 @@
       <artifactId>mapstruct-jdk8</artifactId>
       <version>${org.mapstruct.version}</version>
     </dependency>
+    <!-- for AOP logical-->
+<!--    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-aop</artifactId>
+    </dependency>-->
 
   </dependencies>
   <build>
