--- a/sorelTP2/src/main/resources/application.properties
+++ b/sorelTP2/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
 #pour les messages avec accent, internalisation
 spring.messages.encoding=ISO-8859-1
+#Disable error page
+#server.error.whitelabel.enabled=false
