--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 
 # Intellij
-*/.idea/*
-*.iml/*
-*.iws/*
-*.iml
+.idea/*
+.iml/*
+.iws/*
+.iml
+.*
 
 
 # Maven
-*/log/*
-*/target/*
-*/log/*
-*/target/*
+log/*
+target/*
+log/*
